// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Армирование 1`] = `
Object {
  "ab": 353600,
  "asw_sw": 0.87,
  "cut_chars": undefined,
  "cut_off": 0,
  "cut_off_ibx": 0,
  "cut_off_iby": 0,
  "cut_off_sx": 0,
  "cut_off_sy": 0,
  "cut_xc": 0,
  "cut_yc": 0,
  "f_ult": 612.252,
  "factor": 0.962,
  "fb_ult": 365.98,
  "fsw_ult": 246.272,
  "fsw_ult_1": 246.272,
  "h0": 170,
  "ibx": 133173666,
  "iby": 54303666,
  "lx": 670,
  "ly": 370,
  "m_factor_1": 0.419,
  "m_factor_2": 0.321,
  "mbx_ult": 69945.93,
  "mby_ult": 51647.13,
  "mswx_ult": 47067.907,
  "mswx_ult_1": 47067.907,
  "mswy_ult": 34754.307,
  "mswy_ult_1": 34754.307,
  "mx_1": undefined,
  "my_1": undefined,
  "n_factor": 0.641,
  "qsw": 0.148,
  "rbt": 0.001035,
  "size_u_bottom": 670,
  "size_u_left": 370,
  "size_u_right": 370,
  "size_u_top": 670,
  "sx": 0,
  "sy": 0,
  "u": 2080,
  "wbx": 397533,
  "wby": 293533,
  "xa": 0,
  "xc": 0,
  "xmax": 0,
  "xmax_op": 0,
  "ya": 0,
  "yc": 0,
  "ymax": 0,
  "ymax_op": 0,
}
`;

exports[`Колонна рядом с 1 краем плиты c армированием 1`] = `
Object {
  "ab": 227800,
  "asw_sw": 0.9,
  "cut_chars": undefined,
  "cut_off": 0,
  "cut_off_ibx": 0,
  "cut_off_iby": 0,
  "cut_off_sx": 0,
  "cut_off_sy": 0,
  "cut_xc": 0,
  "cut_yc": 0,
  "f_ult": 348.536,
  "factor": 2.111,
  "fb_ult": 184.52,
  "fsw_ult": 164.016,
  "fsw_ult_1": 164.016,
  "h0": 170,
  "ibx": 34764441,
  "iby": 37419333,
  "lx": 485,
  "ly": 370,
  "m_factor_1": 3.888,
  "m_factor_2": 0.704,
  "mbx_ult": 15469.08,
  "mby_ult": 27852.03,
  "mswx_ult": 13750.294,
  "mswx_ult_1": 13750.294,
  "mswy_ult": 24757.358,
  "mswy_ult_1": 24757.358,
  "mx_1": 102708.71,
  "my_1": 19614,
  "n_factor": 1.407,
  "qsw": 0.153,
  "rbt": 0.00081,
  "size_u_bottom": 485,
  "size_u_left": 0,
  "size_u_right": 370,
  "size_u_top": 485,
  "sx": 146675,
  "sy": 0,
  "u": 1340,
  "wbx": 112339,
  "wby": 202266,
  "xa": 200,
  "xc": 109.46,
  "xmax": 309.46,
  "xmax_op": 0,
  "ya": 0,
  "yc": 0,
  "ymax": 0,
  "ymax_op": 0,
}
`;

exports[`Колонна рядом с 1 краем плиты без армирования 1`] = `
Object {
  "ab": 227800,
  "asw_sw": 0,
  "cut_chars": undefined,
  "cut_off": 0,
  "cut_off_ibx": 0,
  "cut_off_iby": 0,
  "cut_off_sx": 0,
  "cut_off_sy": 0,
  "cut_xc": 0,
  "cut_yc": 0,
  "f_ult": 184.52,
  "factor": 3.986,
  "fb_ult": 184.52,
  "fsw_ult": 0,
  "fsw_ult_1": 0,
  "h0": 170,
  "ibx": 34764441,
  "iby": 37419333,
  "lx": 485,
  "ly": 370,
  "m_factor_1": 7.344,
  "m_factor_2": 1.329,
  "mbx_ult": 15469.08,
  "mby_ult": 27852.03,
  "mswx_ult": 0,
  "mswx_ult_1": 0,
  "mswy_ult": 0,
  "mswy_ult_1": 0,
  "mx_1": 102708.71,
  "my_1": 19614,
  "n_factor": 2.657,
  "qsw": 0,
  "rbt": 0.00081,
  "size_u_bottom": 485,
  "size_u_left": 0,
  "size_u_right": 370,
  "size_u_top": 485,
  "sx": 146675,
  "sy": 0,
  "u": 1340,
  "wbx": 112339,
  "wby": 202266,
  "xa": 200,
  "xc": 109.46,
  "xmax": 309.46,
  "xmax_op": 0,
  "ya": 0,
  "yc": 0,
  "ymax": 0,
  "ymax_op": 0,
}
`;

exports[`Простой тест 1`] = `
Object {
  "ab": 421600,
  "asw_sw": 0,
  "cut_chars": undefined,
  "cut_off": 0,
  "cut_off_ibx": 0,
  "cut_off_iby": 0,
  "cut_off_sx": 0,
  "cut_off_sy": 0,
  "cut_xc": 0,
  "cut_yc": 0,
  "f_ult": 212.49,
  "factor": 2.308,
  "fb_ult": 212.49,
  "fsw_ult": 0,
  "fsw_ult_1": 0,
  "h0": 170,
  "ibx": 178063666,
  "iby": 139707000,
  "lx": 670,
  "ly": 570,
  "m_factor_1": 0,
  "m_factor_2": 0,
  "mbx_ult": 45541.75,
  "mby_ult": 42000.34,
  "mswx_ult": 0,
  "mswx_ult_1": 0,
  "mswy_ult": 0,
  "mswy_ult_1": 0,
  "mx_1": undefined,
  "my_1": undefined,
  "n_factor": 2.308,
  "qsw": 0,
  "rbt": 0.000504,
  "size_u_bottom": 670,
  "size_u_left": 570,
  "size_u_right": 570,
  "size_u_top": 670,
  "sx": 0,
  "sy": 0,
  "u": 2480,
  "wbx": 531533,
  "wby": 490200,
  "xa": 0,
  "xc": 0,
  "xmax": 0,
  "xmax_op": 0,
  "ya": 0,
  "yc": 0,
  "ymax": 0,
  "ymax_op": 0,
}
`;

exports[`Простой тест c моментами 1`] = `
Object {
  "ab": 319600,
  "asw_sw": 0,
  "cut_chars": undefined,
  "cut_off": 0,
  "cut_off_ibx": 0,
  "cut_off_iby": 0,
  "cut_off_sx": 0,
  "cut_off_sy": 0,
  "cut_xc": 0,
  "cut_yc": 0,
  "f_ult": 258.88,
  "factor": 2.841,
  "fb_ult": 258.88,
  "fsw_ult": 0,
  "fsw_ult_1": 0,
  "h0": 170,
  "ibx": 90972000,
  "iby": 47458666,
  "lx": 570,
  "ly": 370,
  "m_factor_1": 1.671,
  "m_factor_2": 0.947,
  "mbx_ult": 43953.84,
  "mby_ult": 35324.59,
  "mswx_ult": 0,
  "mswx_ult_1": 0,
  "mswy_ult": 0,
  "mswy_ult_1": 0,
  "mx_1": undefined,
  "my_1": undefined,
  "n_factor": 1.894,
  "qsw": 0,
  "rbt": 0.00081,
  "size_u_bottom": 570,
  "size_u_left": 370,
  "size_u_right": 370,
  "size_u_top": 570,
  "sx": 0,
  "sy": 0,
  "u": 1880,
  "wbx": 319200,
  "wby": 256533,
  "xa": 0,
  "xc": 0,
  "xmax": 0,
  "xmax_op": 0,
  "ya": 0,
  "yc": 0,
  "ymax": 0,
  "ymax_op": 0,
}
`;
